--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "build:data": "node server/database/dummyData/index.js"
   },
   "devDependencies": {
-    "codecov": "^3.2.0",
+    "codecov": "^3.5.0",
     "concurrently": "^4.1.0",
-    "eslint": "5.12.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
-    "nodemon": "^1.18.10"
+    "jest": "24.7.1",
+    "nodemon": "^1.19.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
@@ -55,7 +55,7 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.22",
+    "mongoose": "^5.5.8",
     "morgan": "^1.9.1",
     "supertest": "^4.0.2"
   }
